# barcode_generator

./: .gitignore  barcode_generator.py  barcode_template.html  barcode_tree.py  pyproject.toml
